@@ -1,0 +1,15 @@
+[tool.black]
+line-length = 80
+target-version = ['py34', 'py35', 'py36', 'py37', 'py38']
+include = '\.pyi?$'
+exclude = '''
+(
+  /(
+      \.git
+    | \.tox
+    | env
+    | build
+    | dist
+  )/
+)
+'''
