@@ -1,6 +1,7 @@
 [flake8]
 show-source = True
-ignore = E731, W503
+ignore = E203, E731, W503
+max-line-length = 88
 
 [tool:pytest]
 testpaths = reg
