@@ -42,6 +42,7 @@ setup(
         ],
         pep8=[
             'flake8',
+            'black',
         ],
         coverage=[
             'pytest-cov',
