@@ -20,7 +20,8 @@ commands = py.test --cov --cov-fail-under=100 {posargs}
 basepython = python3.7
 extras = pep8
 
-commands = flake8 reg setup.py
+commands = flake8 reg *.py
+           black --check .
 
 [testenv:docs]
 basepython = python3.7
