@@ -24,6 +24,8 @@ CHANGES
 
 - Make Python 3.7 the default testing environment.
 
+- Add integration for the Black code formatter.
+
 
 0.11 (2016-12-23)
 =================
